...
//

import UIKit
import UsbongKit

struct SampleTree {
    static let fileName = "Usbong iOS"
    static let ext = "utree"
}

struct UsbongNotification {
    static let CopiedTreeInApp = "ph.usbong.Usbong.CopiedTreeInApp"
}
...
